# Sand-wiki

./: .dockerignore  .env.example  .gitattributes  .gitignore  HANDOVER.md  docker-compose.yml  gemini-code-1780940162053.md  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/wiki/: .env.example  .gitignore  Dockerfile  TODO.md  instructions.md  next.config.ts  package.json
deploy/: Caddyfile  deploy.sh
design/: README (1).md
docs/: ROADMAP.md  data-provenance.html  hero-box-preview.html  vps-deploy.md
docs/design/: README.md  index.html  sand-wiki.css  tech-tree.html  tech-tree.js
sand-netcapture/: README.md  config.toml  pyproject.toml
sand-netcapture/src/sand_netcapture/: __main__.py  capture.py  capture_core.py  config.py  coverage.py  emit.py  proxy.py  transform_research_tree.py
sand-netcapture/tests/: test_capture.py  test_capture_core.py  test_cli.py  test_config.py  test_coverage.py  test_emit.py  test_proxy.py  test_transform_research_tree.py
sand-netcapture/tests/fixtures/: master_GetResearchTree.min.json
sand-wiki/: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  instructions.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
sand-wiki/datamine/: README.md
sand-wiki/prisma/: backfill-ammo-type.ts  build-weapon-stats.ts  buy-migration.test.ts  buy-migration.ts  curated-extras.json  curated-extras.ts  data.json  env-content.json  gear.json  gen-tech-tool-data.mjs  gen-tech-tree-poc.mjs  icons.json  import-env-content.mjs  import-scraper-assets.mjs  new-ammo.json  (+35 more)
(+552 files in other folders)
